# adaptive-ai-video-streaming

./: .gitignore  CMakeLists.txt  README.md
include/net/: tcp_client.h  tcp_server.h
src/: .CMakeLists.txt.swp  main_receiver.cpp  main_sender.cpp
src/net/: tcp_client.cpp  tcp_server.cpp
